11/17 과제 : 트위터와 페북

--- a/Html_CSS/src/main/webapp/study/01_html/image_map.html
+++ b/Html_CSS/src/main/webapp/study/01_html/image_map.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<hr3>11/17 과제 </hr3>
+<hr3>11/17 과제 : 트위터와 페북 </hr3>
 <img src="../image/twitter_facebook.jpg" alt="twitter_FB" usemap="#twitter_FB" >
 
 <map name="twitter_FB">
