--- a/Html_CSS/src/main/webapp/study/01_html/image_map.html
+++ b/Html_CSS/src/main/webapp/study/01_html/image_map.html
@@ -10,8 +10,8 @@
 <img src="../image/twitter_facebook.jpg" alt="twitter_FB" usemap="#twitter_FB" >
 
 <map name="twitter_FB">
-  <area shape="rect" coords="10,57,163,197" alt="Twitter" href="https://ko-kr.facebook.com/enespanol/">
-  <area shape="rect" coords="168,60,303,196" alt="Facebook" href="https://twitter.com/">
+  <area shape="rect" coords="10,57,163,197" alt="Twitter" href="https://twitter.com/">
+  <area shape="rect" coords="168,60,303,196" alt="Facebook" href="https://ko-kr.facebook.com/enespanol/">
 </map>
 
 
