--- a/Html_CSS/src/main/webapp/study/01_html/image_map.html
+++ b/Html_CSS/src/main/webapp/study/01_html/image_map.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Insert title here</title>
 </head>
-<body>
+<body>z
 
 <hr3>11/17 과제 : 트위터와 페북 </hr3>
 <img src="../image/twitter_facebook.jpg" alt="twitter_FB" usemap="#twitter_FB" >
