--- a/Html_CSS/src/main/webapp/study/02_profile/online_profile.html
+++ b/Html_CSS/src/main/webapp/study/02_profile/online_profile.html
@@ -4,9 +4,12 @@
 <head>
 	<title>온라인 프로필</title>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<style>
-		
-
+		h1{color: black;}
+		table, th, td { border:1px solid black;
+		border-collapse: collapse;
+		}
 
 
 
@@ -14,9 +17,59 @@
 </head>
 
 <body>
+<h1 style="text-align:center;background-color:lightblue;">온라인 프로필 만들기</h1>
+<img src="../../img/pf.png">
+<p style="font-size:160%;">오늘은 남은 인생이 시작되는 첫째날</p>
+<p style="font-size:300%;"><b> KilDong Hong</b></p>
+<p>이메일: hong@gmail.com</p>
+<p style="font-size:160%;"><b> Who I am?</b></p>
+<p> 프론트엔드 웹 기술에 관심을 가지고 있습니다. <br>
+현재 마이크로소프트 공인 최고기술전문가로 활동 중이며, <br>
+제주의 한 시골 마을에서 코딩 중입니다. </p>
+<p style="font-size:160%;"><b>SNS</b></p>
+<ul>
+<li><a href="https://www.facebook.com/" target="_blank">facebook(blank)</a></li> 
+<li><a href="https://www.twitter.com/" target="_self">twitter(self)</a></li>
+<li><a href="https://www.twitter.com/" target="_top">twitter(top)</a></li>
+<li><a href="https://www.twitter.com/" target="_parent">twitter(parent)</a></li>
+</ul>
+<br>
+<hr>
+<p style="font-size:160%;"><b>Skills</b></p>
+<ul>
+<li>사용언어</li>
+<dd><li style="list-style-type:circle;"><mark>HTML</mark></li></dd>
+<dd><li style="list-style-type:circle;"><mark>CSS</mark></li></dd>
+<dd><li style="list-style-type:circle;">Javascript</li></dd>
+<dd><li style="list-style-type:circle;">AngularJS</li></dd>
+<li>사용 툴</li>
+<dd><li style="list-style-type:circle;">Photoshop(12years)</li></dd>
+<dd><li style="list-style-type:circle;">Dreamweaver(19years)</li></dd>
+<dd><li style="list-style-type:circle;"><b>Visual Studio(5years)</b></li></dd>
+</ul>
+<p style="font-size:160%;"><b>Academic</b></p>
 
-
-
+<table style="width:60%">
+<caption>학력 사항</caption>
+  <tr>
+    <th>출신학교</th>
+    <th>전공</th>
+    <th>기간</th>
+    <th>졸업구분</th>
+  </tr>
+  <tr>
+    <td>ㅇㅇㅇ고등학교</td>
+    <td>(해당사항 없음)</td>
+    <td>2001.3 ~ 2004.2</td>
+    <td>졸업</td>
+  </tr>
+  <tr>
+    <td>ㅁㅁ대학교</td>
+    <td>(해당사항 없음)</td>
+    <td>2001.3 ~ 2004.2</td>
+    <td>졸업</td>
+  </tr>
+</table>
 
 
 
